<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:scaleType="centerCrop"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        app:srcCompat="@drawable/ic_logo_app"
        android:contentDescription="@string/texto_logotipo_do_app" />

    <TextView
        android:id="@+id/login_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/texto_formulario_de_login"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="32sp" />

    <EditText
        android:id="@+id/login_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:backgroundTint="@android:color/white"
        android:hint="@string/hint_digite_seu_usuario"
        android:importantForAutofill="no"
        tools:targetApi="lollipop" />

    <EditText
        android:id="@+id/login_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:backgroundTint="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:hint="@string/hint_digite_sua_senha"
        android:importantForAutofill="no"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/login_botao_entrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:backgroundTint="@android:color/white"
        android:textColor="@color/purple_700"
        android:text="@string/texto_botao_entrar"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/login_txt_nao_tem_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:textAlignment="center"
        android:text="Não tem usuário?" />

    <Button
        android:id="@+id/login_botao_criar_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:backgroundTint="@android:color/white"
        android:textColor="@color/purple_700"
        android:text="@string/texto_botao_criar_usuario"
        tools:targetApi="lollipop" />
</LinearLayout>